
=======================================================
            WanT code:  Log of Changes 
=======================================================


09 Jul 2006      configure.h (generatedduring configuration) added; (AF)

07 Jul 2006      qexml.f90 changed: bug fixed; WanT is compatible with espresso-3.1.1 qexml;
                 shutdown routine added (MPI init & finalize are now used); 
                 want_dftread added, want_init changed, input_manager extracted from input module.
                 programs accordingly changed; want_interfaces.f90 added. (AF)

05 Jul 2006      bug fixed in polarization.f90 (BB)

04 Jul 2006      dos calculation added to test02 (copper examples). (AF)    

01 Jul 2006      IO revision completed; the is interfaced to the espresso internal iotk fmt,
                 qexml, both for v3.1 and v3.1.1 (patched). (AF)

15 Jun 2006      IO improvement further implemented. (AF)

10 Jun 2006      Libs qexml.f90 and qexpt.f90 added to libs: they manage the dftdata
                 reading from the different iotk fmts in espresso. Variables
                 dftdata_fmt and wantdata_fmt added to input_parameters.f90 ;
                 important revision of IO procedure started. (AF)

08 Jun 2006      spin_component var no longer in bands input. want_init updated; 
                 dos.f90 postproc added to $HOME/wannier dir. 
                 smearing.f90 added to wannier (basic smearing defs),
                 taken from transport/smearing.f90 (changed); monkpack.f90 routine added to
                 wannier, get_monkpack.f90 changed; test06 updated (dos calculation added);
                 documentation updated. Cleanup of unused variables performed. (AF)

06 Jun 2006      Smearing implementation completed in transport: conductor.f90, 
                 transfer.f90, green.f90, gzero_maker.f90 accordingly changed;
                 smearing.f90 module added. (BB)
