@@ -25,7 +25,7 @@
 # ***** modify the following variables according to your env *****
 #
 
-DFT_BIN=~/espresso/bin
+DFT_BIN=~/espresso-3.1.1/bin
 TMPDIR=/scratch/WanT
 
 PARA_PREFIX=
