@@ -79,17 +79,17 @@
    ! architecture / compilation details
    !
 #ifdef __HAVE_CONFIG_INFO
-   WRITE( stdout, "(2x,'         HOST:',4x,a)" ) __CONF_HOST
-   WRITE( stdout, "(2x,'         ARCH:',4x,a)" ) __CONF_ARCH
-   WRITE( stdout, "(2x,'   C COMPILER:',4x,a)" ) __CONF_MPICC
-   WRITE( stdout, "(2x,' CPP COMPILER:',4x,a)" ) __CONF_CPP
-   WRITE( stdout, "(2x,' F90 COMPILER:',4x,a)" ) __CONF_MPIF90
-   WRITE( stdout, "(2x,' F77 COMPILER:',4x,a)" ) __CONF_MPIF77
-   WRITE( stdout, "(2x,'       DFLAGS:',4x,a)" ) __CONF_DFLAGS
-   WRITE( stdout, "(2x,'    BLAS LIBS:',4x,a)" ) __CONF_BLAS_LIBS
-   WRITE( stdout, "(2x,'  LAPACK LIBS:',4x,a)" ) __CONF_LAPACK_LIBS
-   WRITE( stdout, "(2x,'     FFT LIBS:',4x,a)" ) __CONF_FFT_LIBS
-   WRITE( stdout, "(2x,'    MASS LIBS:',4x,a)" ) __CONF_MASS_LIBS
+   WRITE( stdout, "(2x,'         HOST :',4x,a)" ) ADJUSTR( __CONF_HOST        )
+   WRITE( stdout, "(2x,'         ARCH :',4x,a)" ) ADJUSTR( __CONF_ARCH        )
+   WRITE( stdout, "(2x,'           CC :',4x,a)" ) ADJUSTR( __CONF_MPICC       )
+   WRITE( stdout, "(2x,'          CPP :',4x,a)" ) ADJUSTR( __CONF_CPP         )
+   WRITE( stdout, "(2x,'          F90 :',4x,a)" ) ADJUSTR( __CONF_MPIF90      )
+   WRITE( stdout, "(2x,'          F77 :',4x,a)" ) ADJUSTR( __CONF_MPIF77      )
+   WRITE( stdout, "(2x,'       DFLAGS :',4x,a)" ) ADJUSTR( __CONF_DFLAGS      )
+   WRITE( stdout, "(2x,'    BLAS LIBS :',4x,a)" ) ADJUSTR( __CONF_BLAS_LIBS   )
+   WRITE( stdout, "(2x,'  LAPACK LIBS :',4x,a)" ) ADJUSTR( __CONF_LAPACK_LIBS )
+   WRITE( stdout, "(2x,'     FFT LIBS :',4x,a)" ) ADJUSTR( __CONF_FFT_LIBS    )
+   WRITE( stdout, "(2x,'    MASS LIBS :',4x,a)" ) ADJUSTR( __CONF_MASS_LIBS   )
 #endif
    !
    WRITE( stdout, "(/)")
