@@ -4,7 +4,10 @@
 =======================================================
 
 
-09 Jul 2006      configure.h (generatedduring configuration) added; (AF)
+10 Jul 2006      configure.h fingerprints added to startup.f90; some bug fixed. (AF)
+
+09 Jul 2006      configure.h (generated during configuration) added; (AF)
+                 Italy WINS FIFA football world championship.
 
 07 Jul 2006      qexml.f90 changed: bug fixed; WanT is compatible with espresso-3.1.1 qexml;
                  shutdown routine added (MPI init & finalize are now used); 
